--- a/index.html
+++ b/index.html
@@ -1,2 +1,85 @@
-<h1>habemus página</h1>
-<a href="demo">demo</a>
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Você Me Paga</title>
+    <meta name="description" content="A ferramenta que vai unificar sua vida financeira!">
+    <meta name="keywords" content="finanças, contas, pagamento, gerenciador financeiro, boletos, como pagar">
+    <meta property="og:title" content="Vocẽ Me Paga" />
+    <meta
+      property="og:description"
+      content="A ferramenta que vai unificar sua vida financeira!"
+    />
+    <meta
+      property="og:image"
+      content="https://vocemepa.ga/assets/bg.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://vocemepa.ga"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>VOCÊ ME PAGA</h1>
+
+      <!-- orig. contas -->
+      <ul>
+        <li>Controle suas despesas</li>
+        <li>Gerencie suas finanças</li>
+        <li>Mude seu jeito de pagar contas</li>
+      </ul>
+    </header>
+
+    <section id="intro">
+      <h2>
+        Chegou a ferramenta que vai <span class="yellow">unificar</span> sua
+        vida financeira!
+      </h2>
+      <div class="phone">
+        <img
+          src="assets/home.jpg"
+          alt="Tela inicial do aplicativo. Ela apresenta o saldo em conta, cartões de crédito cadastrados e botões para depositar, pagar e ver os registros."
+        />
+      </div>
+    </section>
+
+    <section id="contas">
+      <h2>
+        <span class="salmon">Pague</span> contas e
+        <span class="yellow">movimente</span> seu
+        <span class="green">dinheiro</span> de forma fácil
+      </h2>
+      <div class="phone">
+        <img
+          src="assets/pay.png"
+          alt="Tela de pagamentos. Nela, pode-se pagar boletos, transferir dinheiro e fazer uma cobrança."
+        />
+      </div>
+    </section>
+
+    <section id="e.gerencia">
+      <h2>
+        Monitore e gerencie o pagamento de todas as suas contas
+      </h2>
+      <div class="phone">
+        <img
+          src="assets/bills.jpg"
+          alt="Lista de despesas, organizadas por tipo e sinalizadas de acordo com o status do pagamento."
+        />
+      </div>
+    </section>
+
+    <section id="app">
+      <h2>
+        Call to action
+      </h2>
+      <a href="demo">Veja uma demonstração</a>
+      <div class="producthunt-embed">
+        (reservado pro producthunt)
+      </div>
+    </section>
+  </body>
+</html>
