--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Você Me Paga</title>
     <meta name="description" content="A ferramenta que vai unificar sua vida financeira!">
     <meta name="keywords" content="finanças, contas, pagamento, gerenciador financeiro, boletos, como pagar">
-    <meta property="og:title" content="Vocẽ Me Paga" />
+    <meta property="og:title" content="Você Me Paga" />
     <meta
       property="og:description"
       content="A ferramenta que vai unificar sua vida financeira!"
@@ -74,7 +74,7 @@
 
     <section id="app">
       <h2>
-        Call to action
+        Experimente!
       </h2>
       <a href="demo">Veja uma demonstração</a>
       <div class="producthunt-embed">
