--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://vocemepa.ga/assets/bg.jpg"
+      content="https://vocemepa.ga/assets/thumb.jpg"
     />
     <meta
       property="og:url"
@@ -40,7 +40,7 @@
       </h2>
       <div class="phone">
         <img
-          src="assets/home.jpg"
+          src="assets/home.png"
           alt="Tela inicial do aplicativo. Ela apresenta o saldo em conta, cartões de crédito cadastrados e botões para depositar, pagar e ver os registros."
         />
       </div>
@@ -60,13 +60,13 @@
       </div>
     </section>
 
-    <section id="e.gerencia">
+    <section id="e-gerencia">
       <h2>
         Monitore e gerencie o pagamento de todas as suas contas
       </h2>
       <div class="phone">
         <img
-          src="assets/bills.jpg"
+          src="assets/bills.png"
           alt="Lista de despesas, organizadas por tipo e sinalizadas de acordo com o status do pagamento."
         />
       </div>
@@ -77,8 +77,8 @@
         Experimente!
       </h2>
       <a href="demo">Veja uma demonstração</a>
-      <div class="producthunt-embed">
-        (reservado pro producthunt)
+      <div class="embed">
+        (espaço reservado)
       </div>
     </section>
   </body>
