--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h2>
         Experimente!
       </h2>
-      <a href="expo">Veja uma demonstração</a>
+      <a href="demo">Veja uma demonstração</a>
       <div class="embed">
         (espaço reservado)
       </div>
