--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="app-container">
-            <iframe src="https://vocemepa.ga/expo" frameborder="0"></iframe>
+            <iframe style="border: none;"  src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FyC3mRxYHyKY14bxtMlSbJp%2Fcip%3Fnode-id%3D81%253A6%26scaling%3Dscale-down" allowfullscreen></iframe>
         </div>
     </main>
 </body>
