--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         Experimente!
       </h2>
       <a href="demo">Veja uma demonstração</a>
+      <a class="figma-link" href="https://www.figma.com/proto/yC3mRxYHyKY14bxtMlSbJp/cip?node-id=4%3A2&scaling=scale-down">Abrir demonstração no Figma</a>
     </section>
   </body>
 </html>
