--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Você Me Paga</title>
-    <meta name="description" content="A ferramenta que vai unificar sua vida financeira!">
-    <meta name="keywords" content="finanças, contas, pagamento, gerenciador financeiro, boletos, como pagar">
+    <meta
+      name="description"
+      content="A ferramenta que vai unificar sua vida financeira!"
+    />
+    <meta
+      name="keywords"
+      content="finanças, contas, pagamento, gerenciador financeiro, boletos, como pagar"
+    />
     <meta property="og:title" content="Você Me Paga" />
     <meta
       property="og:description"
       content="A ferramenta que vai unificar sua vida financeira!"
     />
-    <meta
-      property="og:image"
-      content="https://vocemepa.ga/assets/thumb.jpg"
-    />
-    <meta
-      property="og:url"
-      content="https://vocemepa.ga"
-    />
+    <meta property="og:image" content="https://vocemepa.ga/assets/thumb.jpg" />
+    <meta property="og:url" content="https://vocemepa.ga" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <h1>VOCÊ ME PAGA</h1>
-
-      <!-- orig. contas -->
       <ul>
         <li>Controle suas despesas</li>
         <li>Gerencie suas finanças</li>
@@ -77,7 +75,13 @@
         Experimente!
       </h2>
       <a href="demo">Veja uma demonstração</a>
-      <a class="figma-link" href="https://www.figma.com/proto/yC3mRxYHyKY14bxtMlSbJp/cip?node-id=4%3A2&scaling=scale-down">Abrir demonstração no Figma</a>
+      <!-- <a href="expo">Veja uma demonstração (no Expo)</a> -->
+      <a
+        class="figma-link"
+        href="https://www.figma.com/proto/yC3mRxYHyKY14bxtMlSbJp/cip?node-id=4%3A2&scaling=scale-down"
+        >Abrir demonstração no Figma</a
+      >
+      <!-- valeu! -->
     </section>
   </body>
 </html>
